fix height on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+html {
+    height: 100%;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,6 +11,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: rgb(18, 18, 18);
   color: white;
+  height: 100%;
 }
 
 code {
